# mem_translator

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4d607c93538f_create_memes_table.py
app/: main.py
app/api/v1/endpoints/: memes.py
app/core/: config.py
app/models/: meme.py
app/schemas/: meme.py
app/services/: meme_processor.py  telegram_bot.py
